--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,10 @@
     <title>Mybrary</title>
 </head>
 <body>
-    beforehgfdfghjklkjhgf
+    before content
     <br>
     <%- body  %>
     <br>
-    after
+    after content
 </body>
 </html>
