--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,10 @@
     <title>Mybrary</title>
 </head>
 <body>
-    before content
+    and before it
     <br>
     <%- body  %>
     <br>
-    after content
+    after the content
 </body>
 </html>
