--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,10 @@
     <title>Mybrary</title>
 </head>
 <body>
-    and before it
+ before content
     <br>
     <%- body  %>
     <br>
-    after the content 
+    after content 
 </body>
 </html>
